--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -21,6 +21,7 @@
 			<h2>Passwort ändern</h2>
 		   <div class="row">
 					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}">
+					        <div class="col-50">
 					        <table class="mainTable">
 					            <thead>
 					                <tr>
@@ -32,15 +33,16 @@
 					            <tbody>
 									<tr th:each="user, itemStat : *{users}">
 									    <td>
-										    <input	type="text"
+										    <input type="text" 
 									    		name="benutzername"
 									    		th:field="*{users[__${itemStat.index}__].username}" 
 									    		th:id="${itemStat.index}"
-									    		class="btn btn-info btn-lg" data-toggle="modal" data-target="#passwordChange" readonly/>
+									    		class="btn btn-lg" data-toggle="modal" data-target="#passwordChange" readonly/>
 									    </td>
 									</tr>
 					            </tbody>
 					        </table>
+					       </div> 
 					</form>
 					
 		            <div th:if="${param.success}">
@@ -63,24 +65,21 @@
 			        <table class="mainTable">
 			            <thead>
 			                <tr>
-			                	<th class="CellWithComment"><i class="far fa-question-circle"></i>
-									<span class="CellComment" >Mitarbeiter auswählen</span>
-								</th>
-			                    <th>Username</th>
+			                	<th>Username</th>
 			                    <th>Password</th>
 			                </tr>
 			            </thead>
 			            <tbody>
-							<tr th:each="user, itemStat : *{users}">
+							<tr th:each ="user, itemStat : *{users}">
 							    <td>
-								    <input	type="text"
+								    <input	type="text" style="margin-left: 0px;"
 							    		name="benutzername"
 							    		th:field="*{users[__${itemStat.index}__].username}" 
 							    		th:id="${itemStat.index}" readonly/>
 							    </td>
 							    
 							    <td>
-							    	<input 	type="password" class="passwordField" style="margin-left: 0px;"
+							    	<input type="password" class="passwordField" style="margin-left: 0px;"
 							    			name="passwordField" 
 							    			th:field="*{users[__${itemStat.index}__].password}" 
 							    			th:id="${itemStat.index}"/>
