added submit button to passswordaenderung modal window
* added missing submit button to the modal

--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -89,6 +89,9 @@
 			        </table>
 				</form>
 	        </div>
+	        <div class="modal-footer">
+	        		<p><input type="submit" value="Bestätigen"  data-dismiss="modal"/></p>
+	        </div>
 	      </div>
 	    </div>
 	  </div>
